--- a/notebook/01_data_ingestion.ipynb
+++ b/notebook/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users'"
+       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis/notebook'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/'"
+       "'/Users/pradhyumnyadav/Desktop/chest_ctscan_analysis'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,88 +60,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
-    "class DataIngestionConfig:\n",
-    "    root_dir: Path\n",
-    "    source_URL: str\n",
-    "    local_data_file: Path\n",
-    "    unzip_dir: Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ct_scan.constants import *\n",
+    "import os\n",
+    "import zipfile\n",
+    "import gdown\n",
+    "from ct_scan import logger\n",
+    "from ct_scan.utils.common import get_size\n",
     "from ct_scan.utils.common import read_yaml, create_directories\n",
-    "from ct_scan.config.configuration import ConfigurationManager\n",
-    "from pathlib import Path\n",
     "from ct_scan.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from ct_scan.config.configuration import ConfigurationManager\n",
-    "from pathlib import Path\n",
+    "@dataclass(frozen=True)\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path\n",
+    "    source_URL: str\n",
+    "    local_data_file: Path\n",
+    "    unzip_dir: Path\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class ConfigurationManager:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        config_filepath = CONFIG_FILE_PATH,\n",
-    "        params_filepath = PARAMS_FILE_PATH):\n",
-    "\n",
+    "        config_filepath=CONFIG_FILE_PATH,\n",
+    "        params_filepath=PARAMS_FILE_PATH\n",
+    "    ):\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
-    "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "\n",
-    "    \n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
-    "\n",
     "        create_directories([config.root_dir])\n",
-    "\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
     "            root_dir=config.root_dir,\n",
     "            source_URL=config.source_URL,\n",
     "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir \n",
+    "            unzip_dir=config.unzip_dir\n",
     "        )\n",
-    "\n",
-    "        return data_ingestion_config\n",
-    "      "
+    "        return data_ingestion_config\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import zipfile\n",
-    "import gdown\n",
-    "from ct_scan import logger\n",
-    "from ct_scan.utils.common import get_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,58 +165,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'config/config.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 23\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[0;32mIn[15], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams \u001b[38;5;241m=\u001b[39m read_yaml(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams_filepath)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 16\u001b[0m     config \u001b[38;5;241m=\u001b[39m \u001b[43mConfigurationManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig_filepath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mconfig/config.yaml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m     data_ingestion_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_data_ingestion_config()\n\u001b[1;32m     19\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n",
-      "Cell \u001b[0;32mIn[15], line 11\u001b[0m, in \u001b[0;36mConfigurationManager.__init__\u001b[0;34m(self, config_filepath, params_filepath)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig_filepath \u001b[38;5;241m=\u001b[39m Path(config_filepath)  \u001b[38;5;66;03m# Convert string to pathlib.Path\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams_filepath \u001b[38;5;241m=\u001b[39m Path(params_filepath)  \u001b[38;5;66;03m# Convert string to pathlib.Path\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m \u001b[43mread_yaml\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig_filepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams \u001b[38;5;241m=\u001b[39m read_yaml(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams_filepath)\n",
-      "File \u001b[0;32m~/Desktop/chest_ctscan_analysis/venv/lib/python3.11/site-packages/ensure/main.py:872\u001b[0m, in \u001b[0;36mWrappedFunctionReturn.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    869\u001b[0m         msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArgument \u001b[39m\u001b[38;5;132;01m{arg}\u001b[39;00m\u001b[38;5;124m of type \u001b[39m\u001b[38;5;132;01m{valt}\u001b[39;00m\u001b[38;5;124m to \u001b[39m\u001b[38;5;132;01m{f}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match annotation type \u001b[39m\u001b[38;5;132;01m{t}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    870\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m EnsureError(msg\u001b[38;5;241m.\u001b[39mformat(arg\u001b[38;5;241m=\u001b[39marg, f\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf, t\u001b[38;5;241m=\u001b[39mtempl, valt\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mtype\u001b[39m(value)))\n\u001b[0;32m--> 872\u001b[0m return_val \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    873\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(return_val, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_templ):\n\u001b[1;32m    874\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReturn value of \u001b[39m\u001b[38;5;132;01m{f}\u001b[39;00m\u001b[38;5;124m of type \u001b[39m\u001b[38;5;132;01m{valt}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match annotation type \u001b[39m\u001b[38;5;132;01m{t}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[0;32m~/Desktop/chest_ctscan_analysis/src/ct_scan/utils/common.py:38\u001b[0m, in \u001b[0;36mread_yaml\u001b[0;34m(path_to_yaml)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myaml file is empty\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 38\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "File \u001b[0;32m~/Desktop/chest_ctscan_analysis/src/ct_scan/utils/common.py:31\u001b[0m, in \u001b[0;36mread_yaml\u001b[0;34m(path_to_yaml)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"reads yaml file and returns\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \n\u001b[1;32m     20\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;124;03m    ConfigBox: ConfigBox type\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 31\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath_to_yaml\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m yaml_file:\n\u001b[1;32m     32\u001b[0m         content \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39msafe_load(yaml_file)\n\u001b[1;32m     33\u001b[0m         logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myaml file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_to_yaml\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m loaded successfully\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'config/config.yaml'"
-     ]
-    }
-   ],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "class ConfigurationManager:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        config_filepath=\"config/config.yaml\",\n",
-    "        params_filepath=\"params.yaml\"):\n",
-    "        \n",
-    "        self.config_filepath = Path(config_filepath)  # Convert string to pathlib.Path\n",
-    "        self.params_filepath = Path(params_filepath)  # Convert string to pathlib.Path\n",
-    "        self.config = read_yaml(self.config_filepath)\n",
-    "        self.params = read_yaml(self.params_filepath)\n",
-    "\n",
-    "\n",
     "try:\n",
-    "    config = ConfigurationManager(config_filepath=\"config/config.yaml\")\n",
-    "\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except FileNotFoundError as e:\n",
+    "    logger.error(f\"FileNotFoundError: {e.filename} not found.\")\n",
+    "except Exception as e:\n",
+    "    logger.error(f\"Error occurred: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    logger.info(\"Configuration loaded successfully.\")\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    logger.info(\"Data ingestion configuration loaded successfully.\")\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except FileNotFoundError as e:\n",
+    "    logger.error(f\"FileNotFoundError: {e.filename} not found.\")\n",
+    "except Exception as e:\n",
+    "    logger.error(f\"Error occurred: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
     "    data_ingestion.download_file()\n",
     "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
-    "    raise e\n"
+    "    raise e"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
